--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -10,7 +10,7 @@
 			<h1>Address Book</h1>
 <!--Create new contacts -->
 			<h2>Create a New Contact:</h2>
-			<form action="/create_contact" type="post">
+			<form action="/create_contact" method="post">
 				<label for="first_name">First Name:</label>
 				<input type="text" name="first_name">
 				<label for="last_name">Last Name:</label>
