--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -2,37 +2,84 @@
 <html>
 
 	<head>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+		<link rel="stylesheet" href="styles.css" type="text/css">
 		<title>Address Book</title>
 	</head>
 
 	<body>
 		<div class="container">
-			<h1>Address Book</h1>
+			<div class="row header">
+				<div class="col-sm-6">
+					<h1>Online Address Book</h1>
+				</div>
+				<div class="col-sm-6">
+					<div class="search">
+						<form class="" action="/search" method="post">
+							<!-- <label for="search">Search Contacts:</label> -->
+							<input type="text" name="search" value="">
+							<button type="submit" name="button">Search Contacts</button>
+						</form>
+					</div>
+				</div>
+			</div>
+
 <!--Create new contacts -->
 			<h2>Create a New Contact:</h2>
 			<form action="/create_contact" method="post">
-				<label for="first_name">First Name:</label>
-				<input type="text" name="first_name">
-				<label for="last_name">Last Name:</label>
-				<input type="text" name="last_name">
-				<label for="phone">Phone Number:</label>
-				<input type="number" name="phone">
+				<div class="form-group">
+					<label for="first_name">First Name:</label>
+					<input type="text" name="first_name">
+				</div>
+				<div class="form-group">
+					<label for="last_name">Last Name:</label>
+					<input type="text" name="last_name">
+				</div>
+				<div class="form-group">
+					<label for="phone">Phone Number:</label>
+					<input type="number" name="phone">
+				</div>
+
 				<h3>Address:</h3>
+				<div class="form-group">
 					<label for="street">Street:</label>
 					<input type="text" name="street">
+				</div>
+				<div class="form-group">
 					<label for="city">City:</label>
 					<input type="text" name="city">
+				</div>
+				<div class="form-group">
 					<label for="state">State:</label>
 					<input type="text" name="state">
+				</div>		
 				<button type="submit">Create Contact</button>
 			</form>
 
-
 <!-- Display contacts-->
+			{% if contacts is not empty %}
+			<ul>
+				{% for contact in contacts %}
+				<div class="singleContact">
+					<li><p>{{ contact.fullName() }}</p>
+						<ul>
+							<li>Phone: {{ contact.getPhone() }}</li>
+							<li>Address: {{ contact.getStreet() }}, {{ contact.getCity() }} {{ contact.getState() }}</li>
+						</ul>
+					</li>
+				</div>
+				{% endfor %}
+			</ul>
 
+			<form class="" action="/delete_all" method="post">
+				<button type="submit">DELETE ALL CONTACTS</button>
+			</form>
+			{% else %}
+			<p id="notice">You have no contacts.</p>
+		 	{% endif %}
 
 		</div>
-		
+
 	</body>
 
 
