--- a/views/new_contact.html.twig
+++ b/views/new_contact.html.twig
@@ -24,7 +24,7 @@
 			</div>
 <!-- new contact notification -->
 			<div class="row">
-				<div class="col-sm-5 col-sm-offset-1">
+				<div id="contactForm" class="col-sm-5 col-sm-offset-1">
 					<h2>New Contact Added:</h2>
 
 					<p>Name: {{ newContact.fullName() }}</p>
