--- a/views/search_results.html.twig
+++ b/views/search_results.html.twig
@@ -23,7 +23,7 @@
 			</div>
 <!-- Search Results -->
 			<div class="row">
-				<div class="col-sm-5 col-sm-offset-1">
+				<div id="contactList" class="col-sm-5 col-sm-offset-1">
 					<h2>Search Results</h2>
 
 					{% if matching_contacts is not empty %}
